[project]
name = "toki"
version = "0.0.0"
description = "Minimal universal LLM interface API"
readme = "README.md"
authors = [
    { name = "David Samson", email = "david@jataware.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toki"]
